data/all_generated_tests/raw_wast_tests/br_EdgeCaseFailuresinbr_table_1223.wast
;; 4. **Empty `br_table`:**    - Description: Define a `br_table` without any target labels.    - Examine how the engine responds to a `br_table` with an empty target list. This should typically default to the `else` case.    - Specific Constraint: Ensure proper fallback handling when no target labels are present.

(assert_invalid
 (module 
  (func $empty-br_table-case (block (br_table )))
 )
 "unknown label"
)